--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="needle second"></div>
             <div class="center-point"></div>
         </div>
-        <button class="toggle">light</button>
+        <button class="toggle">Dark</button>
 		<script src="script.js"></script>
 	</body>
 </html>
